src/test/ui/try-block/try-block-bad-type.stderr
error[E0277]: `?` couldn't convert the error to `TryFromSliceError`
  --> $DIR/try-block-bad-type.rs:7:16
   |
LL |         Err("")?;
   |                ^ the trait `From<&str>` is not implemented for `TryFromSliceError`
   |
   = help: the following implementations were found:
             <TryFromSliceError as From<Infallible>>
   = note: required by `from`

error[E0271]: type mismatch resolving `<Result<i32, i32> as Bubble>::Ok == &str`
  --> $DIR/try-block-bad-type.rs:12:9
   |
LL |         ""
   |         ^^ expected `i32`, found `&str`

error[E0271]: type mismatch resolving `<Result<i32, i32> as Bubble>::Ok == ()`
  --> $DIR/try-block-bad-type.rs:15:39
   |
LL |     let res: Result<i32, i32> = try { };
   |                                       ^ expected `i32`, found `()`

error[E0277]: the trait bound `(): Bubble` is not satisfied
  --> $DIR/try-block-bad-type.rs:17:25
   |
LL |     let res: () = try { };
   |                         ^ the trait `Bubble` is not implemented for `()`
   |
   = note: required by `continue_with`

error[E0277]: the trait bound `(): Bubble` is not satisfied
  --> $DIR/try-block-bad-type.rs:17:25
   |
LL |     let res: () = try { };
   |                         ^ the trait `Bubble` is not implemented for `()`

error[E0277]: the trait bound `i32: Bubble` is not satisfied
  --> $DIR/try-block-bad-type.rs:21:26
   |
LL |     let res: i32 = try { 5 };
   |                          ^ the trait `Bubble` is not implemented for `i32`
   |
   = note: required by `continue_with`

error: aborting due to 6 previous errors

Some errors have detailed explanations: E0271, E0277.
For more information about an error, try `rustc --explain E0271`.
